--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -9,6 +9,7 @@
 
     <div class="container">
         <br>
+        <h2>Inicio de Sesión</h2>
         <p><i>Llena los siguientes campos correctamente</i></p>
         <br>
 
