--- a/usuarios/templates/profile.html
+++ b/usuarios/templates/profile.html
@@ -2,7 +2,7 @@
 {#{% load static from staticfiles %}#}
 
 {% block title %}
-    Usuarios | {{ user }}
+    Usuarios | Profile
 {% endblock title %}
 
 {% block content %}
