--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -45,6 +45,7 @@
                 <small class="text-muted">Last updated 3 mins ago</small>
             </div>
         </div>
+
         <div class="card">
             <img class="card-img-top" src="{% static 'img/torneo.jpg' %}" alt="Card image cap">
             <div class="card-body">
@@ -60,7 +61,7 @@
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">img com src diferente</p>
             </div>
             <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
