--- a/lugares/templates/lugares.html
+++ b/lugares/templates/lugares.html
@@ -1,8 +1,22 @@
 {% extends "base.html" %}
+{% load static %}
 
-{% block title %}
-    Lugares | Listado
-{% endblock title %}
+{% block title %}Lugares | Listado{% endblock title %}
+
+{% block assets %}
+    <script src="{% static 'js/jquery-3.2.1.slim.min.js' %}"
+                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+                crossorigin="anonymous"></script>
+
+        <script src="{% static 'js/popper.min.js' %}"
+                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+                crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" crossorigin="anonymous">
+        <script src="{% static 'js/bootstrap.min.js' %}"
+                integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+                crossorigin="anonymous"></script>
+{% endblock %}
 
 {% block content %}
 
@@ -40,7 +54,7 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <small class="text-muted">{{ lugar.ciudad }}</small>
+                            <small class="text-muted">{{ lugar.ciudad }}, {{ lugar.capacidad }} personas</small>
                         </div>
                     </div>
                     <br>
