--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -11,6 +11,7 @@
     {% load static from staticfiles %}
 
     {% block statics %}
+        <link rel="stylesheet" href="{% static 'css/header.css' %}" crossorigin="anonymous">
         <script src="{% static 'js/jquery-3.2.1.slim.min.js' %}"
                 integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
                 crossorigin="anonymous"></script>
@@ -24,11 +25,7 @@
                 integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
                 crossorigin="anonymous"></script>
 
-        <link rel="stylesheet" href="{% static 'css/header.css' %}">
-        <link rel="stylesheet" href="{% static 'css/assets.css' %}">
-
     {% endblock statics %}
-
 </head>
 
 <body>
@@ -231,6 +228,7 @@
 {% endblock footer %}
 
 {% block scripts %} {% endblock scripts %}
+</footer>
 </body>
 
 </html>
