Se ha eliminado el Slug de Usuario; se ha cambiado la manera de acceder por url al Perrfil de Usuario y las diversas opciones con este (Actualizar datos, cambiar contraseña); se ha eliminado el enlace y el template a cambiar imagen, esta configuración se ha unificado con la modificación de todos los datos actualizables de un usuario

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -67,7 +67,7 @@
                     {% if user.is_authenticated %}
                         <li class="nav-item active">
                             <a class="nav-link"
-                               href="{% url 'usuarios_profile' user.slug %}"><img src="{{ user.imagen.url }}"
+                               href="{% url 'usuarios_profile' user.id %}"><img src="{{ user.imagen.url }}"
                                                                                   height="30"
                                                                                   style="border-radius: 6px;">
                                 {{ user.username }}
