--- a/usuarios/templates/usuario_update_form.html
+++ b/usuarios/templates/usuario_update_form.html
@@ -1,19 +1,19 @@
-{% extends "base.html" %}
-{% load static from staticfiles %}
-
-{% block title %}
-Linkage
-{% endblock title %}
-
-{% block content %}
-
-<form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Update" />
-</form>
-
-{% endblock content %}
-
-{% block scripts %}
-
-{% endblock scripts %}
+{#{% extends "base.html" %}#}
+{#{% load static from staticfiles %}#}
+{##}
+{#{% block title %}#}
+{#Linkage#}
+{#{% endblock title %}#}
+{##}
+{#{% block content %}#}
+{##}
+{#<form method="post">{% csrf_token %}#}
+{#    {{ form.as_p }}#}
+{#    <input type="submit" value="Update" />#}
+{#</form>#}
+{##}
+{#{% endblock content %}#}
+{##}
+{#{% block scripts %}#}
+{##}
+{#{% endblock scripts %}#}
