--- a/usuarios/templates/usuarios_update.html
+++ b/usuarios/templates/usuarios_update.html
@@ -16,6 +16,11 @@
             <br>
 
             <div class="form-group">
+                <label for="first_name" class="col-md-2">Username: </label>
+                {{ form.username }} {{ form.username.errors }}
+            </div>
+
+            <div class="form-group">
                 <label for="first_name" class="col-md-2">Nombre: </label>
                 {{ form.first_name }} {{ form.first_name.errors }}
             </div>
@@ -26,13 +31,13 @@
             </div>
 
             <div class="form-group">
-                <label for="tipo_id" class="col-md-2">Tipo de Identificación: </label>
-                {{ form.tipo_id }} {{ form.tipo_id.errors }}
+                <label for="last_name" class="col-md-2">Fecha de Nacimiento: </label>
+                {{ form.birth_date }} {{ form.birth_date.errors }}
             </div>
 
             <div class="form-group">
-                <label for="last_name" class="col-md-2">Identificación: </label>
-                {{ form.identificacion }} {{ form.identificacion.errors }}
+                <label for="last_name" class="col-md-2">Imagen: </label>
+                {{ form.imagen }} {{ form.imagen.errors }}
             </div>
 
             <div class="form-group">
