--- a/usuarios/templates/usuarios_update.html
+++ b/usuarios/templates/usuarios_update.html
@@ -32,7 +32,8 @@
 
             <div class="form-group">
                 <label for="last_name" class="col-md-2">Fecha de Nacimiento: </label>
-                {{ form.birth_date }} {{ form.birth_date.errors }}
+                <input type="date" value={{ form.birth_date }}
+                {{ form.birth_date.errors }}
             </div>
 
             <div class="form-group">
