--- a/lugares/templates/lugares.html
+++ b/lugares/templates/lugares.html
@@ -3,20 +3,20 @@
 
 {% block title %}Lugares | Listado{% endblock title %}
 
-{% block assets %}
-    <script src="{% static 'js/jquery-3.2.1.slim.min.js' %}"
-                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-                crossorigin="anonymous"></script>
-
-        <script src="{% static 'js/popper.min.js' %}"
-                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-                crossorigin="anonymous"></script>
-
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" crossorigin="anonymous">
-        <script src="{% static 'js/bootstrap.min.js' %}"
-                integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-                crossorigin="anonymous"></script>
-{% endblock %}
+{#{% block assets %}#}
+{#    <script src="{% static 'js/jquery-3.2.1.slim.min.js' %}"#}
+{#                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"#}
+{#                crossorigin="anonymous"></script>#}
+{##}
+{#        <script src="{% static 'js/popper.min.js' %}"#}
+{#                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"#}
+{#                crossorigin="anonymous"></script>#}
+{##}
+{#        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" crossorigin="anonymous">#}
+{#        <script src="{% static 'js/bootstrap.min.js' %}"#}
+{#                integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"#}
+{#                crossorigin="anonymous"></script>#}
+{#{% endblock %}#}
 
 {% block content %}
 
@@ -37,10 +37,9 @@
     <br>
 
     <div class="container">
-        <div class="card-group">
+        <div class="card-columns">
 
             {% for lugar in object_list %}
-                <div class="col-md-4">
                     <div class="card">
                         {% if lugar.img_ppal %}
                             <a href="{% url 'lugares_detail' lugar.slug %}"><img class="card-img-top"
@@ -55,11 +54,9 @@
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">{{ lugar.ciudad }}, {{ lugar.capacidad }} personas</small>
+                            <small class="text-muted">{{ lugar.ciudad }}, {{ lugar.capacidad }} personas</small>
                         </div>
                     </div>
-                    <br>
-                </div>
-
             {% endfor %}
         </div>
     </div>
