--- a/lugares/templates/registroLugar.html
+++ b/lugares/templates/registroLugar.html
@@ -36,6 +36,11 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="nombre" class="col-md-2">Administrador: </label>
+                    {{ form.admin }} {{ form.admin.errors }}
+                </div>
+
+                <div class="form-group">
                     <label for="city" class="col-md-2">Categoría: </label>
                     {{ form.categoria }} {{ form.categoria.errors }}
                 </div>
