--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,9 +1,16 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %} Linkage | home {% endblock title %}
+{% block title %}Linkage | home{% endblock title %}
 
 {% block content %}
+{#    <div class="alert alert-warning alert-dismissible fade show" role="alert">#}
+{#      Gracias por estar de nuevo con nosotros en Linkage#}
+{#      <button type="button" class="close" data-dismiss="alert" aria-label="Close">#}
+{#        <span aria-hidden="true">&times;</span>#}
+{#      </button>#}
+{#    </div>#}
+
 <div class="container" style="background-color : #272727;">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -33,7 +40,7 @@
     </a>
     </div>
 
-    <div class="card-deck">
+    <div class="card-columns">
         <div class="card">
             <img class="card-img-top" src="{% static 'img/equipo.jpg' %}" alt="Card image cap">
             <div class="card-body">
@@ -57,10 +64,38 @@
         </div>
 
         <div class="card">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="{% static 'img/rostro.png' %}" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">img com src diferente</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur.</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="card-img-top" src="{% static 'img/torneo.jpg' %}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="card-img-top" src="{% static 'img/torneo.jpg' %}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. <p>
             </div>
             <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
