--- a/usuarios/templates/profile.html
+++ b/usuarios/templates/profile.html
@@ -12,7 +12,7 @@
         <div class="container">
             <br>
             <div class="form-row">
-                <label class="col-md-2">{{ user.imagen.url }}</label>
+                <label class="col-md-2"></label>
                 <label><a href="{% static user.imagen.url %}"><img src="{{ user.imagen.url }}" width="350"></a></label>
 
             </div>
