--- a/usuarios/templates/usuarios_update.html
+++ b/usuarios/templates/usuarios_update.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <form method="post">{% csrf_token %}
+    <form method="POST">{% csrf_token %}
 
         <div class="container">
 
@@ -32,8 +32,7 @@
 
             <div class="form-group">
                 <label for="last_name" class="col-md-2">Fecha de Nacimiento: </label>
-                <input type="date" value={{ form.birth_date }}
-                {{ form.birth_date.errors }}
+                <input type="date" value={{ form.birth_date }} {{ form.birth_date.errors }}
             </div>
 
             <div class="form-group">
