--- a/lugares/templates/lugares_update_lugar.html
+++ b/lugares/templates/lugares_update_lugar.html
@@ -7,7 +7,7 @@ Linkage | {{ lugar }}
 
 {% block content %}
 
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
         <div class="container">
