--- a/usuarios/templates/usuarios_update.html
+++ b/usuarios/templates/usuarios_update.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
         <div class="container">
