--- a/lugares/static/css/assets.css
+++ b/lugares/static/css/assets.css
@@ -1,20 +1,20 @@
-.color_bg-az_cielo{
-    background-color: #b8daff;
-}
+/*.color_bg-az_cielo{*/
+    /*background-color: #b8daff;*/
+/*}*/
 
-.color_bg-darkblue{
-    background-color: darkblue;
-}
+/*.color_bg-darkblue{*/
+    /*background-color: darkblue;*/
+/*}*/
 
-.color_bg-verde_WA{
-    background-color: #00d54f;
+/*.color_bg-verde_WA{*/
+    /*background-color: #00d54f;*/
 
-}
+/*}*/
 
-.color_bg-verde_WA:hover{
-    background-color: blue;
-}
-.profile_img-header {
-    border-radius: 20px;
-    width: 25px;
-}
+/*.color_bg-verde_WA:hover{*/
+    /*background-color: blue;*/
+/*}*/
+/*.profile_img-header {*/
+    /*border-radius: 20px;*/
+    /*width: 25px;*/
+/*}*/
