--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -24,9 +24,9 @@
             crossorigin="anonymous"></script>
 
     {% block styles %}
-    
+{#        <link rel="stylesheet" type="text/css" href="{% static 'css/header.css' %}">#}
     {% endblock styles %}
-{#    <link rel="stylesheet" type="text/css" href="{% static 'css/assets.css' %}">#}
+
 
 </head>
 
